<resources>
    <string name="app_name">Exploit-db</string>
    <string name="report_github">Create issue on GitHub</string>
    <string name="close">Close</string>
    <string name="restart">Restart</string>
    <string name="share">Share</string>
    <string name="share_s">Share %s</string>
    <string name="error_occurred">An error has occurred</string>
    <string name="internal_storage">Internal storage</string>
    <string name="external_storage">External storage</string>
    <string name="not_available">Not available</string>
    <string name="cannot_find_available_storage">Cannot find any available storage</string>
    <string name="other_storage">Other storage</string>
    <string name="nothing_found">Nothing found</string>
    <string name="_empty" translatable="false" />
    <string name="try_again">Try again</string>
    <string name="operation_not_supported1">This operation is not supported</string>
    <string name="file_not_found">File not found</string>
    <string name="network_error">Network connection error</string>
    <string name="tap_to_try_again">Tap to try again</string>
    <string name="all">All</string>
    <string name="filter">Filter</string>
    <string name="type">Type</string>
    <string name="platform">Platform</string>
    <string name="port">Port</string>
    <string name="tag">Tag</string>
    <string name="text_search_holder_secondary">Try to reformulate the query.</string>
    <string name="search_exploit">Search Exploit</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="search_history_cleared">Search history cleared</string>
    <string name="text_clear_search_history_prompt">Do you really want to remove all recent search queries? This action cannot be undone.</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="details">Details</string>
    <string name="code">Exploit Code</string>
    <string name="open_in_code_browser">Open code in browser</string>
    <string name="open_in_exploit_browser">Open exploit in browser</string>
    <string name="save">Save</string>
    <string name="exploit_code_title">Exploit code</string>
    <string name="exploit_code_title_s">Code : %s</string>
    <string name="text_empty_holder_primary">It\'s kind of empty here…</string>
    <string name="you_have_not_favourites_yet">You have not favourites yet</string>
    <string name="favorites">Favorites</string>
    <string name="remote">Latest</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="settings">Settings</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="verified">Verified</string>
    <string name="has_app">Has App</string>
    <string name="no_metasploit">No Metasploit</string>
    <string name="reset">Reset</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="automatic">Automatic</string>
    <string name="hide_toolbar">Hide toolbar when scrolling</string>
    <string name="black_dark_theme">Black dark theme</string>
    <string name="black_dark_theme_summary">Useful for AMOLED screens</string>
    <string name="restart_required">Restart required</string>
    <string name="new_exploits_checking">New Exploits checking</string>
    <string name="new_exploits">New exploits</string>
    <string name="notification_sound">Notification sound</string>
    <string name="light_indicator">Light indicator</string>
    <string name="vibration">Vibration</string>
    <string name="notifications">Notifications</string>
    <string name="show_notification_new_exploits">show Notification for new exploits</string>
    <string name="silent">Silent</string>
    <string name="notifications_settings">Notifications settings</string>
    <string name="notifications_title">Type : %s - Platform : %s</string>
    <string name="type_s">Type : %s</string>
    <string name="platform_s">Platform : %s</string>
    <string name="author_s">Author : %s</string>
    <string name="application_update">Check for updates automatically</string>
    <string name="app_update_available">Application update is available</string>
    <string name="show_notification_app_update">Show notification if update is available</string>
    <string name="new_version_s">New version: %s</string>
    <string name="size_s">Size: %s</string>
    <string name="text_file_sizes">B|kB|MB|GB|TB</string>
    <string name="download">Download</string>
    <string name="about">About</string>
    <string name="app_version">Version %s</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="update_check_failed">Update check failed</string>
    <string name="no_update_available">No updates available</string>
    <string name="about_app_translation_summary">Translate this app</string>
    <string name="about_app_translation">Translation</string>
    <string name="about_author">Author</string>
    <string name="about_feedback">Feedback</string>
    <string name="about_feedback_4pda">Topic on 4PDA</string>
    <string name="about_copyright_and_licenses">Copyright &amp; Licenses</string>
    <string name="about_license">License</string>
    <string name="zooming">Code zooming</string>
    <string name="code_view_light_theme">Light theme</string>
    <string name="code_view_dark_theme">Dark theme</string>
    <string name="wrap_code">Wrap code line</string>
    <string name="show_line_number">Show line number</string>
    <string name="notification_filter">Notifications filter</string>
    <string name="notification_filter_summary">Customize notifications by exploit Type and Platform</string>
    <string name="dns_configuration">DNS Configuration</string>
    <string name="network">Network</string>
    <string name="clear_cookies">Clear cookies</string>
    <string name="cookies_cleared">All cookies was removed</string>

</resources>