<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/theme"
        app:iconSpaceReserved="false">

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/themes"
        android:entryValues="@array/values_theme"
        android:key="theme"
        android:title="@string/theme"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="amoled_theme"
        android:summary="@string/black_dark_theme_summary"
        android:title="@string/black_dark_theme"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="hide_toolbar"
        android:title="@string/hide_toolbar"
        app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Code viewer"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="github"
            android:entries="@array/themes_codeView"
            android:entryValues="@array/values_theme_codeView"
            android:key="code_view_light_theme"
            android:title="@string/code_view_light_theme"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="atom-one-dark"
            android:entries="@array/themes_codeView"
            android:entryValues="@array/values_theme_codeView"
            android:key="code_view_dark_theme"
            android:title="@string/code_view_dark_theme"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="code_view_zoom"
            android:title="@string/zooming"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="code_view_wrap"
            android:title="@string/wrap_code"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="code_view_line_number"
            android:title="@string/show_line_number"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="true"
            android:key="tracker_notifications"
            android:summary="@string/show_notification_new_exploits"
            android:title="@string/notifications"
            app:iconSpaceReserved="false" />

        <PreferenceScreen
            android:fragment="com.dev.wolf.exploit_db.settings.NotificationsFilterFragment"
            android:title="@string/notification_filter"
            android:summary="@string/notification_filter_summary"
            app:iconSpaceReserved="false" />

        <Preference
            android:dependency="tracker_notifications"
            android:key="notifications_settings"
            android:title="@string/notifications_settings"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/network"
        app:iconSpaceReserved="false">

        <ListPreference
            android:entries="@array/dns_client"
            android:key="preferred_dns_client"
            android:title="@string/dns_configuration"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:key="cookies_clear"
            android:persistent="false"
            android:title="@string/clear_cookies"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/app_name"
        app:iconSpaceReserved="false">

    <PreferenceScreen
        android:fragment="com.dev.wolf.exploit_db.settings.about.AboutSettingsFragment"
        android:title="@string/about"
        app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>