<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:initialExpandedChildrenCount="5">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/app_name">

        <Preference
            app:iconSpaceReserved="false"
            app:key="app_version"
            app:persistent="false"
            app:summary="@string/check_for_updates" />

        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="false"
            app:key="app_update_auto"
            app:summary="@string/show_notification_app_update"
            app:title="@string/application_update"
            tools:isPreferenceVisible="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_feedback">
        <Preference
            app:iconSpaceReserved="false"
            app:key="about_feedback_github"
            app:summary="https://github.com/gaiththewolf/Exploitdb/issues"
            app:title="GitHub" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="copyright"
        app:title="@string/about_copyright_and_licenses">

        <Preference
            android:fragment="com.dev.wolf.exploit_db.settings.about.LicenseFragment"
            app:icon="@drawable/ic_copyleft"
            app:iconSpaceReserved="false"
            app:key="about_license"
            app:title="@string/about_license" />

    </PreferenceCategory>

</PreferenceScreen>