<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_code_browser"
        android:icon="@drawable/ic_open_external"
        android:title="@string/open_in_code_browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exploit_browser"
        android:icon="@drawable/ic_open_external"
        android:title="@string/open_in_exploit_browser"
        app:showAsAction="never" />

</menu>