<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/notification_filter"
        app:iconSpaceReserved="false">

    <MultiSelectListPreference
        android:dialogTitle="@string/type"
        android:key="notifications_filter_type"
        android:summary=""
        android:icon="@drawable/ic_type"
        android:title="@string/type"
        android:entries="@array/exploit_types"
        android:entryValues="@array/exploit_types_values"
        android:defaultValue="@array/exploit_types_values"
        />

    <MultiSelectListPreference
        android:dialogTitle="@string/platform"
        android:key="notifications_filter_platform"
        android:summary=""
        android:icon="@drawable/ic_platform"
        android:title="@string/platform"
        android:entries="@array/exploit_platforms"
        android:entryValues="@array/exploit_platforms_values"
        android:defaultValue="@array/exploit_platforms_values"
        />

    </PreferenceCategory>
</PreferenceScreen>