<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/types_container"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/types_header"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/spinner_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_spinner" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/platforms_container"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/platforms_header"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/platform"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/spinner_platforms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_spinner" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ports_container"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ports_header"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/port"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/spinner_ports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_spinner" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tags_container"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tags_header"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/spinner_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_spinner" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_btn_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/cancel"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_apply"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/apply"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>